Fix spacing on cover image.

--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ a {
 
 .anchor {
   padding-top: 65px;
-  /*margin-top: -50px;*/
+  margin-top: -10px;
 }
 
 #myNavbar {
